Updated classes Main.java, Customer.java